--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
       <div class="body">
         <div class="nav">
-          <div class="landr">
+          <div class="landr" id="landr">
             <i class="fa-solid fa-circle-chevron-left"></i>
             <i class="fa-solid fa-circle-chevron-right"></i>
           </div>
